@@ -196,7 +196,7 @@ export("copAMH", "copClayton", "copFrank", "copGumbel", "copJoe"
        ,"getAcop"
        ,"cacopula", "dnacopula", "pnacopula", "rnacopula", "rnchild"
        ## estimation
-       ## ,"coeffG", "polyG", "polyJ", "signFF"
+       ,"coeffG" ## , "polyG", "polyJ", "signFF"
        ,"initOpt"
        ,"beta.", "betan", "pobs"
        , debye1, debye2 # <- since we extend the gsl ones
